[tool.poetry]
name = "pprof"
version = "0.1.1"
description = "Python profiling tool"
authors = ["mirecl <grazhdankov@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["timing", "timer", "profiling", "profiler", "perfomance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.urls]
Repository = "https://github.com/mirecl/pprof"
Homepage = "https://github.com/mirecl/pprof"
Documentation = "https://github.com/mirecl/pprof"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
line-profiler = "^3.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "0.16.0"
pytest-mock = "^3"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["tests/*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
