[tool.poetry]
name = "pprof"
version = "0.2.0"
description = "Python profiling tool"
authors = ["mirecl <grazhdankov@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["timing", "timer", "profiling", "profiler", "perfomance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
]

[tool.poetry.urls]
Repository = "https://github.com/mirecl/pprof"
Homepage = "https://github.com/mirecl/pprof"
Documentation = "https://github.com/mirecl/pprof"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
line-profiler = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3"
pytest-ordering = "^0.6"
flake8-isort = "^4.1.1"
flake8-bugbear = "^22.4.25"
flake8-eradicate = "^1.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov", "--cov-report=xml", "--cov-report=term"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["tests/*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
